--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,23 +9,44 @@
     integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
     crossorigin="anonymous"></script>
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.6.4/dist/email.min.js"></script>
 
+  <script type="text/javascript">
+    // Initialize EmailJS with your user ID (public key)
+    (function() {
+      emailjs.init("w24vcQ1f0enUJ4Y73"); // Your public key here
+    })();
+
+    // Form submission handling
+    document.addEventListener('DOMContentLoaded', function() {
+      document.getElementById('contactForm').addEventListener('submit', function(event) {
+        event.preventDefault(); // Prevent form from submitting in the traditional way
+
+        // Send form data to EmailJS
+        emailjs.sendForm('service_your_service_id', 'template_your_template_id', this)
+          .then(function(response) {
+            console.log('SUCCESS!', response.status, response.text);
+            alert('Message sent successfully!');
+          }, function(error) {
+            console.log('FAILED...', error);
+            alert('Message failed to send. Please try again later.');
+          });
+      });
+    });
+  </script>
 </head>
 
 <body>
   <!--header design-->
   <header class="header">
-    <a href="#" class="logo">Portfolio</a>
-
+    <a href="#" class="logo">My Portfolio</a>
     <i class='bx bx-menu' id="menu-icon"></i>
-
     <nav class="navbar">
-      <a href="#home">Home</a>
+      <a href="#home" class="active">Home</a>
       <a href="#about">About</a>
-      <a href="#Portfolioid">Portfoloio</a>
+      <a href="#Portfolioid">Portfolio</a>
       <a href="#contact">Contact</a>
     </nav>
-
   </header>
 
   <!-- home section design -->
@@ -40,105 +61,115 @@
       <br>
       <br>
       <div class="social-media">
-
         <a href="https://linkedin.com/in/vimankith-perera-11b5782a4"><i class="fab fa-linkedin"></i></a>
-
         <a href="https://github.com/it21322662/"><i class="fab fa-github"></i></a>
-
-
       </div>
-      <a href=".\Assets\Doc\CV Vimankith Perera.pdf" class="btn">Download CV</a>
+      <a href="./Assets/Doc/M.A.V.D. Perera Resume CV.pdf" class="btn">Download CV</a>
     </div>
-
     <div class="home-img">
-      <img src=".\Assets\Images\My Photo.jpg" alt="My Photo" class="image--cover">
+      <img src="./Assets/Images/My Photo.jpg" alt="My Photo" class="image--cover">
     </div>
   </section>
 
   <!-- about section -->
   <section class="about" id="about">
-
     <div class="about-img">
-      <img src=".\Assets\Images\My Photo.jpg" alt="My Photo" class="image--cover">
+      <img src="./Assets/Images/My Photo.jpg" alt="My Photo" class="image--cover">
     </div>
-
     <div class="about-content">
       <h2 class="heading">About <span>Me</span></h2>
       <h3>Backend Developer!</h3>
-      <p>“I am a young individual who likes to explore the world
-        and learn things from the experience I am very
-        passionate in career in Information Technology and
-        Software Engineering. I am a keen learner with ability
-        to work as a team also as an individual. I am confident
-        that I have the ability to successfully complete any
-        challenging task that I am assigned with. I learn from
-        my past experiences and apply my experiences in the
-        present to achieve success in what I do.”</p>
-
-      <a href="#portfolio" class="btn">See More</a>
+      <p>“I am a young individual who loves to explore the world of technology. I am passionate about my career in
+        Information Technology and Software Engineering, with a focus on backend development. I have experience working
+        in teams and independently, and I'm confident in tackling any challenge that comes my way.”</p>
+      <a href="javascript:void(0)" class="btn" id="seeMoreBtn">See More</a>
+      <div id="moreContent" style="display: none;">
+        <h3>Skills & Expertise</h3>
+        <ul>
+          <li>Languages: JavaScript, Python, C/C++, PHP, JAVA, nodejs, React js, Kotlin</li>
+          <li>Frameworks: Laravel, MERN Stack, Springboot</li>
+          <li>Databases: MySQL, MongoDB, Firebase, AWS, Azure</li>
+          <li>Tools: Git, AWS, Sourcetree</li>
+        </ul>
+        <h3>Education</h3>
+        <p>BSc(Hons) in Information Technology ,
+          University Of Sri Lanka Institute of Information Technology</p>
+        <h3>Experience</h3>
+        <p>I recently completed an internship at Evolve Technologies Pvt Ltd, where I gained valuable hands-on experience in PHP and Laravel development. During my internship, I had the opportunity to work on key projects involving ERP and HRM systems. My focus was primarily on exploring backend functionalities and studying database structures to ensure efficiency and security.
+          <br>
+          <br>
+         <span>Key Contributions:</span> 
+          <li>Developed an authentication system with token generation for a new internal system.</li>
+          <br>
+          <li>APIs for CRUD operations, improving system efficiency and user experience</li> .
+          <br>
+          <li>Gained deep insights into backend systems and data management</li></p>
+      </div>
     </div>
   </section>
 
   <section class="Portfolio" id="Portfolioid">
-
     <h2 class="heading">Latest<span>project</span></h2>
-
     <div class="Portfolio-container">
+
       <div class="Portfolio-box">
-        <img src=".\Assets\Images\portfolio2.jpg" alt="portfolio1">
+        <img src="./Assets/Images/portfolio2.jpg" alt="portfolio1">
+        <div class="porfolio-layer">
+          <h4>Web Design</h4>
+          <p>This project focuses on creating a responsive web design using HTML, CSS, and JavaScript.</p>
+          <!-- Replace 'your-github-repo-url' with your actual GitHub repository URL -->
+          <a href="https://github.com/IT21322662/My_Portforlio.git" target="_blank">
+            <i class='bx bx-link-external'></i>
+          </a>
+        </div>
+      </div>
+      
+      <div class="Portfolio-box">
+        <img src="./Assets/Images/portfolio2.jpg" alt="portfolio1">
         <div class="porfolio-layer">
           <h4>Web Design</h4>
           <p></p>
           <a href="#"><i class='bx bx-link-external'></i></a>
         </div>
       </div>
-
       <div class="Portfolio-box">
-        <img src=".\Assets\Images\portfolio2.jpg" alt="portfolio1">
+        <img src="./Assets/Images/portfolio2.jpg" alt="portfolio1">
         <div class="porfolio-layer">
           <h4>Web Design</h4>
           <p></p>
           <a href="#"><i class='bx bx-link-external'></i></a>
         </div>
       </div>
-
     </div>
   </section>
 
   <!-- contact section design -->
   <section class="contact" id="contact">
-    <h2 class="heading">Conatct<span>Me!</span></h2>
-
-    <form action="#">
+    <h2 class="heading">Contact<span> Me!</span></h2>
+    <form id="contactForm">
       <div class="input-box">
-        <input type="text" placeholder="Full Name">
-        <input type="email" placeholder="Email Address">
+        <input type="text" name="from_name" placeholder="Full Name" required>
+        <input type="email" name="from_email" placeholder="Email Address" required>
       </div>
       <div class="input-box">
-        <input type="number" placeholder="Mobile Number">
-        <input type="text" placeholder="Email Subject">
-        
+        <input type="text" name="subject" placeholder="Email Subject" required>
       </div>
-      <textarea name="Youre Massage" id="" cols="30" rows="10" placeholder="your Massage"></textarea>
-      <input type="submit" value="Send Massage" class="btn">
+      <textarea name="message" cols="30" rows="10" placeholder="Your Message" required></textarea>
+      <input type="submit" value="Send Message" class="btn">
     </form>
   </section>
 
-
-
   <!--footer design -->
-<footer class="footer">
-  <div class="footer-text">
-    <p>Copyright &copy; 2023 by Vimankith | All Rights Reserved.</p>
-  </div>
+  <footer class="footer">
+    <div class="footer-text">
+      <p>Copyright &copy; 2023 by Vimankith | All Rights Reserved.</p>
+    </div>
+    <div class="footer-iconTop">
+      <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+    </div>
+  </footer>
 
-  <div class="footer-iconTop">
-    <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
-  </div>
-</footer>
-
-
-<script src="Js/Scripts.js"></script>
+  <script src="Js/Scripts.js"></script>
 </body>
 
 </html>
