--- a/Portfolio.html
+++ b/Portfolio.html
@@ -52,9 +52,11 @@
   <!-- home section design -->
   <section class="home" id="home">
     <div class="home-content">
-      <h3>Hello, It's Me</h3>
-      <h1>Vimankith Perera</h1>
-      <h3>And I'm a <span>Backend Developer</span></h3>
+      <h3 id="helloText"></h3>
+
+      <h1 id="name">Vimankith Perera</h1>
+      <h3 id="title">And I'm a <span>Backend Developer</span></h3>
+
       <p>Passionate software engineer with diverse project experience.
         Collaborative approach, focus on user experience. Continuous learner.
         Let's connect and discuss your project!</p>
