--- a/Portfolio.html
+++ b/Portfolio.html
@@ -117,7 +117,7 @@
       <div class="Portfolio-box">
         <img src="./Assets/Images/portfolio2.jpg" alt="portfolio1">
         <div class="porfolio-layer">
-          <h4>Web Design</h4>
+          <h4>My_Portfolio</h4>
           <p>This project focuses on creating a responsive web design using HTML, CSS, and JavaScript.</p>
           <!-- Replace 'your-github-repo-url' with your actual GitHub repository URL -->
           <a href="https://github.com/IT21322662/My_Portforlio.git" target="_blank">
@@ -129,11 +129,12 @@
       <div class="Portfolio-box">
         <img src="./Assets/Images/portfolio2.jpg" alt="portfolio1">
         <div class="porfolio-layer">
-          <h4>Web Design</h4>
-          <p></p>
-          <a href="#"><i class='bx bx-link-external'></i></a>
+          <h4>WalletWizard</h4>
+          <p>This Project focuses on creating a App using a Kotlin</p>
+          <a href="https://github.com/IT21322662/MAD_WalletWizard.git"><i class='bx bx-link-external'></i></a>
         </div>
       </div>
+
       <div class="Portfolio-box">
         <img src="./Assets/Images/portfolio2.jpg" alt="portfolio1">
         <div class="porfolio-layer">
